# 2opt-RL

./: .gitignore  CMakeLists.txt
data/TSPLIB/: ArgumentsDebug.tsp
debug/: 2OPTBand2OPTOBCompareCode.txt  2optIJmethodcompareCode.txt  F2OPTBScoreTest.txt  F2OPTBandRLcompareCode.txt  F2OPTBvsTLinKroA100_Gr202Code.txt  F2OPTMtestCode.txt  FIcompareCode.txt  Fast2OptCompareCode.txt  HypParaHminTSearchCode.txt  HyperParaRandomSearchCode.txt  InitTourSequenceTestCode.txt  assignTest.cpp  bigAlphaCode.txt  cintest.cpp  dist  dist_stress.cpp  fio.cpp  gr202OneHourCode.txt  maptest.cpp  test
debug/cpp_tests/: randomNodes.cpp  timeTest.cpp
debug/python_scripts/: sortTSPLIBinstances.ipynb
result/: hyperParameterSearchRstRD100.numbers
result/log/: argminLog2_kroA100_1245_800_4.csv  argminLog2_kroA100_1245_F2OPTM.csv  argminRst_kroA100_1245_400_4.csv  argminRst_kroA100_1245_F2OPTL.csv  modiRewardLog_kroA100_1245_800_4.csv  modiRewardLog_kroA100_1245_F2OPTM.csv  oneHourRst_gr202_1245_3200_4.csv  oneHourRst_gr202_1245_F2OPTM.csv  oneHourRst_gr202_1541_3200_4.csv  oneHourRst_gr202_1541_F2OPTM.csv  oneHourRst_gr202_2316_3200_4.csv  oneHourRst_gr202_2316_F2OPTM.csv  oneHourRst_gr202_7461_3200_4.csv  oneHourRst_gr202_7461_F2OPTM.csv  oneHourRst_gr202_8459_3200_4.csv  oneHourRst_gr202_8459_F2OPTM.csv  performanceCompareLog_gr202_1245_100_3.csv  performanceCompareLog_gr202_1245_100_4.csv  performanceCompareLog_gr202_1245_100_5.csv  performanceCompareLog_gr202_1245_100_6.csv  performanceCompareLog_gr202_1245_1600_3.csv  performanceCompareLog_gr202_1245_1600_4.csv  performanceCompareLog_gr202_1245_1600_5.csv  performanceCompareLog_gr202_1245_1600_6.csv  performanceCompareLog_gr202_1245_200_3.csv  performanceCompareLog_gr202_1245_200_4.csv  performanceCompareLog_gr202_1245_200_5.csv  performanceCompareLog_gr202_1245_200_6.csv  performanceCompareLog_gr202_1245_3200_3.csv  performanceCompareLog_gr202_1245_3200_4.csv  performanceCompareLog_gr202_1245_3200_5.csv  performanceCompareLog_gr202_1245_3200_6.csv  performanceCompareLog_gr202_1245_400_3.csv  performanceCompareLog_gr202_1245_400_4.csv  performanceCompareLog_gr202_1245_400_5.csv  performanceCompareLog_gr202_1245_400_6.csv  performanceCompareLog_gr202_1245_800_3.csv  performanceCompareLog_gr202_1245_800_4.csv  performanceCompareLog_gr202_1245_800_5.csv  performanceCompareLog_gr202_1245_800_6.csv  (+228 more)
result/numbers/: hyperParameterSearchRstRD100.numbers  kroA100_1245_800_4_compare.numbers  kroA_analysis.numbers
src/: main.cpp
src/helper/: RandVec.h  (+5 more)
(+406 files in other folders)
